Stop .content from overflowing on the x-axis

--- a/src/sass/components/_sidebar.scss
+++ b/src/sass/components/_sidebar.scss
@@ -30,6 +30,7 @@
   flex-direction: column;
   flex: 1;
   overflow:auto;
+  overflow-x: hidden;
 }
 
 @media only screen and (max-width: 599px) {
