--- a/src/sass/components/_tabs.scss
+++ b/src/sass/components/_tabs.scss
@@ -41,6 +41,7 @@
     & > .active > a:hover,
     & > .active > a:focus {
       border: none;
+      border-radius: 0;
     }
   }
 
